fix: add different listeners to right and left shift, alt, ctrl

--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 
 .keyboard-row {
     display: flex;
-    width: 90%; 
+    width: 90%;
+    max-width: 700px;
     justify-content: space-between;
     margin: 5px 0 5px;
 }
@@ -16,6 +17,7 @@
     margin: 10px 0 20px;
     display: flex;
     width: 90%;
+    max-width: 700px;
     background-color: rgb(230, 245, 212);
     height: 50vh;
 }
